# NFL

./: .env.example  .gitignore  README.md  head_cli_full.py  pyproject.toml  requirements.txt  settings.yaml
site/: index.html
src/nfl_betting/: __init__.py  __main__.py  actuals.py  cli.py  config.py  nflfastr.py  odds_api.py  report.py  teams.py
src/nfl_betting/models/: __init__.py  moneyline.py  spread.py  total.py
src/nfl_betting/pricing/: __init__.py  edge.py
tests/: test_accuracy_join.py
